--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -74,11 +74,16 @@ a[href="#"] {
   display: inline-block;
   min-width: 120px;
   max-width: 120px;
+  transition: transform 133ms ease-in-out;
+}
+
+.thumbnail-item:hover {
+	transform: scale(1.2);
 }
 
 .thumbnail-list {
   list-style: none;
-  padding: 0;
+  padding: 20px 0;
   white-space: nowrap;
   overflow-x: auto;
   flex: 0 1 auto;
@@ -96,8 +101,14 @@ a[href="#"] {
 
 .detail-image-frame {
   text-align: center;
-  position: relative;
+	position: relative;
+	transition: transform 333ms;
 }
+
+.is-tiny {
+	transform: scale(0.001);
+	transition: transform 0ms;
+	}
 
 .detail-image {
   width: 90%;
@@ -113,6 +124,18 @@ a[href="#"] {
   left: 4px;
 }
 
+.hidden-detail .detail-image-container {
+  display: none;
+}
+
+.hidden-detail .thumbnail-list {
+  flex-direction: column;
+  align-items: center;
+}
+.hidden-detail .thumbnail-item {
+  max-width: 80%;
+}
+
 @media all and (min-width: 768px) {
   .main-content {
     flex-direction: row;
@@ -122,7 +145,8 @@ a[href="#"] {
   .thumbnail-list {
     flex-direction: column;
     order: 0;
-    margin-left: 20px;
+		margin-left: 20px;
+		padding: 0 35px;
   }
 
   .thumbnail-item {
